--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,11 @@ and open the template in the editor.
         <title>Cadastro Produtos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="js/ProdutoController.js"></script> 
+        <script>
+            let produtoController = new ProdutoController();
+            produtoController.listar();
+        </script>
     </head>
     <body>
         <table>
