--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,6 +30,6 @@ and open the template in the editor.
         <br><br>
         <label>Valor:</label><input type="number" id="valor"  />
         <br><br>
-        <button type="button" id="confirmar">Confirmar</button> 
+        <button type="button" id="confirmar" onclick="produtoController.confirmar()">Confirmar</button> 
     </body>
 </html>
