--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,12 +19,15 @@ and open the template in the editor.
         <table>
             <thead>
                 <tr>
+                    <th>Id</th>
                     <th>Nome</th>
                     <th>Valor</th>
                 </tr>
             </thead>
             <tbody id="corpoTabela"></tbody>
         </table>
+        <br><br>
+        <label>Id:</label><input type="text" id="id" readonly="readonly"/>
         <br><br>
         <label>Nome:</label><input type="text" id="nome" />
         <br><br>
