--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>Cadastro Produtos</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="js/ProdutoController.js"></script> 
-        <script>
-            let produtoController = new ProdutoController();
-            produtoController.listar();
-        </script>
-    </head>
-    <body>
-        <br><br>
-        <label>Pesquisar:</label>
-        <input type="text" oninput="produtoController.pesquisar()" id="pesquisar" />
-      
-        <br><br>
-        <table>
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Nome</th>
-                    <th>Valor</th>
-                </tr>
-            </thead>
-            <tbody id="corpoTabela"></tbody>
-        </table>
-        <br><br>
-        <label>Id:</label><input type="text" id="id" readonly="readonly"/>
-        <br><br>
-        <label>Nome:</label><input type="text" id="nome" />
-        <br><br>
-        <label>Valor:</label><input type="number" id="valor"  />
-        <br><br>
-        <button type="button" id="confirmar" onclick="produtoController.confirmar()">Confirmar</button>
-        <button type="button" id="limpar" onclick="produtoController.limpar()">Limpar</button>
-    </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.c17080f1.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.7c60b71a.js"></script></body></html>
